# offerTrackCrawler

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  app.py  crawl_jobs.py  requirements.txt
.github/workflows/: rust.yml
config/: crawl_sites.json
config/discovery/: example-seeds.csv
config/registry/: README.md  employers.json  employers_template.csv
docs/: global-job-coverage.md  interface.md  offertrack-platform.md  web_crawler.md
rust/: Cargo.toml  rust-toolchain.toml
rust/offertrack-crawler/: Cargo.toml
rust/offertrack-crawler/src/: canonical.rs  date_parse.rs  http_fetch.rs  job.rs  lib.rs  main.rs  registry.rs  storage.rs
rust/offertrack-crawler/src/html/: mod.rs  schema_org.rs
rust/offertrack-crawler/src/sources/: amazon_jobs.rs  ashby.rs  bamboohr.rs  feed_source.rs  greenhouse.rs  icims.rs  jobright.rs  lever.rs  mod.rs  recruitee.rs  smartrecruiters.rs  workable.rs  workday.rs
scripts/: crawl-with-spa-merge.sh
scripts/spa-careers/: README.md  crawl.mjs  package-lock.json  package.json  spa_config.example.json  spa_config.json
src/: __init__.py
src/crawler/: __init__.py  models.py  scheduler.py  storage.py  web_crawler.py
src/crawler/extractors/: __init__.py  base.py  generic_schemaorg.py
tests/: test_app.py
