[package]
name = "offertrack-crawler"
version = "0.1.0"
edition = "2021"
description = "offerTrack job crawler: Greenhouse, Lever, Ashby, RSS, Jobright, HTML/Schema.org; employer registry merge; platform push."

[lib]
name = "offertrack_crawler"
path = "src/lib.rs"

[[bin]]
name = "offertrack-crawl"
path = "src/main.rs"

[[bin]]
name = "offertrack-push"
path = "src/bin/offertrack-push.rs"

[[bin]]
name = "offertrack-registry-import"
path = "src/bin/offertrack-registry-import.rs"

[[bin]]
name = "offertrack-career-discover"
path = "src/bin/offertrack-career-discover.rs"

[[bin]]
name = "offertrack-discovery-merge"
path = "src/bin/offertrack-discovery-merge.rs"

[[bin]]
name = "offertrack-merge-jobs"
path = "src/bin/offertrack-merge-jobs.rs"

[dependencies]
anyhow = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
feed-rs = "2.0"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
robots_txt = "0.7"
scraper = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v5"] }
